# lycophron

./: .editorconfig  .gitignore  Pipfile  README.md  lcpimages.py  lcpunit.py  lcpxlsx.py  lycophron.cfg  lycophron.py  lycophron_new_old.py  lycophron_old.py  main.py  pyproject.toml  requirements-dev.txt  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  zenodotus.py
.github/ISSUE_TEMPLATE/: -bug-report---add-short-title-.md  -bug-report--add-short-title.md  -bug-report-.md  -feature-request---add-short-title-.md  -feature-request-.md  bug_report.md
.github/workflows/: tests.yml
lycophron/: cli.py  data.py  models.py
src/: transform_excel.py
src/lycophron/: __init__.py  __main__.py  app.py  cli.py  client.py  config.py  db.py  errors.py  format.py  loaders.py  logger.py  models.py  project.py  references.py  serializers.py  template.py
src/lycophron/schemas/: raw.py  record.py  response.py
src/lycophron/tasks/: __init__.py  tasks.py
tests/: conftest.py  test_cli.py  test_references.py
