[project]
name = "Lycophron"
version = "1.0.0"
authors = [
  { name = "CERN" },
  { name = "Plazi" }
]
description = "This is an example project"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
lycophron = "lycophron:cli"

[project.urls]
"Homepage" = "https://github.com/plazi/lycophron"

[build-system]
requires = ["setuptools>=65", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"