[project]
name = "Lycophron"
version = "1.0.0"
authors = [{ name = "CERN" }, { name = "Plazi" }]
description = "CLI tool for managing Zenodo uploads."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "marshmallow>=3.20.1",
    "idutils>=1.2.1",
    # TODO: Start making releases of inveniordm-py and use a PyPI package here
    "inveniordm-py @ git+https://github.com/inveniosoftware/inveniordm-py@master",
    "celery>=5.3.4",
    "sqlalchemy>=2.0.22",
    "sqlalchemy-utils>=0.41.1",
    "requests>=2.31.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
tests = [
    "black>=23.0.1",
    "isort>=5.12.0",
    "pytest>=7.4.3",
    "ipdb",
]

[project.scripts]
lycophron = "lycophron.cli:lycophron"

[project.urls]
"Homepage" = "https://github.com/plazi/lycophron"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--black --isort --cov=lycophron --cov-report=term-missing"
testpaths = ["tests", "lycophron"]
