[project]
name = "Lycophron"
version = "1.0.0"
authors = [{ name = "CERN" }, { name = "Plazi" }]
description = "CLI tool for managing Zenodo uploads."
readme = "README.md"
dependencies = [
    "click>=8.1.7",
    "marshmallow>=3.20.1",
    "idutils>=1.2.1",
    "inveniordm-py>=0.1.1",
    "celery>=5.3.4",
    "sqlalchemy>=2.0.22",
    "sqlalchemy-utils>=0.41.1",
    "colorlog>=6.8.2,<7.0.0",
]
requires-python = ">=3.12"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1", "ruff>=0.11.4"]

[project.scripts]
lycophron = "lycophron.cli:lycophron"

[project.urls]
"Homepage" = "https://github.com/plazi/lycophron"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov=lycophron --cov-report=term-missing"
testpaths = ["tests", "lycophron"]

[tool.ruff.lint]
extend-select = [
    "E",
    "Q",
    "G",
    "B",
    "I",
    "PERF",
    "PLW",
    "UP",
    "FURB",
]
